force-app/main/default/objects/smagicinteract__Converse_App_Template_Map__c/smagicinteract__Converse_App_Template_Map__c.object-meta.xml
<CustomObject>
    <label>Converse App Template Map</label>
    <nameField>
        <displayFormat>CATM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converse App Template Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>