force-app/main/default/objects/smagicinteract__Converse_App_Template_Map__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <description>This field contains the ID of the related app.</description>
    <label>Converse App</label>
    <referenceTo>smagicinteract__Converse_App__c</referenceTo>
    <relationshipLabel>Converse App Template Maps</relationshipLabel>
    <relationshipName>Converse_App_Template_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>