force-app/main/default/objects/smagicinteract__Converse_App_Template_Map__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <description>This field contains the ID of the related SMS template.</description>
    <label>SMS Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Converse App Template Maps</relationshipLabel>
    <relationshipName>Converse_App_Template_Maps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>