force-app/main/default/objects/smagicinteract__Converse_App_Template_Map__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <description>For mapping templates with converse Apps</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Bulk/Blast</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>